// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IdsMessage Component (using properties) should render 1`] = `
"<ids-message id=\\"test-message\\" message-title=\\"Lost Connection\\" aria-label=\\"error: Lost Connection\\" status=\\"error\\" role=\\"dialog\\"><ids-text slot=\\"title\\" type=\\"h2\\" font-size=\\"24\\" language=\\"en\\" locale=\\"en-US\\">Lost Connection</ids-text><div>This application has experienced a system error
  due to the lack of internet access. Please restart the application in order to proceed.</div>
  <ids-modal-button slot=\\"buttons\\" type=\\"secondary\\" id=\\"my-message-cancel\\" cancel=\\"\\" language=\\"en\\" locale=\\"en-US\\">Cancel</ids-modal-button>
  <ids-modal-button slot=\\"buttons\\" type=\\"primary\\" id=\\"my-message-confirm\\" language=\\"en\\" locale=\\"en-US\\">Confirm</ids-modal-button></ids-message>"
`;

exports[`IdsMessage Component (using properties) should render 2`] = `
"<ids-message id=\\"test-message\\" message-title=\\"Lost Connection\\" aria-label=\\"error: Lost Connection\\" status=\\"error\\" role=\\"dialog\\" visible=\\"\\" style=\\"z-index: 1020;\\"><ids-text slot=\\"title\\" type=\\"h2\\" font-size=\\"24\\" language=\\"en\\" locale=\\"en-US\\">Lost Connection</ids-text><div>This application has experienced a system error
  due to the lack of internet access. Please restart the application in order to proceed.</div>
  <ids-modal-button slot=\\"buttons\\" type=\\"secondary\\" id=\\"my-message-cancel\\" cancel=\\"\\" language=\\"en\\" locale=\\"en-US\\">Cancel</ids-modal-button>
  <ids-modal-button slot=\\"buttons\\" type=\\"primary\\" id=\\"my-message-confirm\\" language=\\"en\\" locale=\\"en-US\\">Confirm</ids-modal-button></ids-message>"
`;

exports[`IdsMessage Component (using properties) should render 3`] = `
"<ids-message id=\\"test-message\\" message-title=\\"Lost Connection\\" aria-label=\\"error: Lost Connection\\" status=\\"error\\" role=\\"dialog\\" style=\\"z-index: 1020;\\"><ids-text slot=\\"title\\" type=\\"h2\\" font-size=\\"24\\" language=\\"en\\" locale=\\"en-US\\">Lost Connection</ids-text><div>This application has experienced a system error
  due to the lack of internet access. Please restart the application in order to proceed.</div>
  <ids-modal-button slot=\\"buttons\\" type=\\"secondary\\" id=\\"my-message-cancel\\" cancel=\\"\\" language=\\"en\\" locale=\\"en-US\\">Cancel</ids-modal-button>
  <ids-modal-button slot=\\"buttons\\" type=\\"primary\\" id=\\"my-message-confirm\\" language=\\"en\\" locale=\\"en-US\\">Confirm</ids-modal-button></ids-message>"
`;
